Added autofocus to input form.

--- a/templates/qr.html
+++ b/templates/qr.html
@@ -6,7 +6,7 @@
 <body>
 <form name="qr" action="/qr/" method=POST>
     <label>
-        <input type="text" name="data"/>
+        <input type="text" name="data" autofocus/>
     </label>
     <input type="submit"/>
 </form>
